MP2-1795 Icons alignment fix, solved circular dependency, removed redundant router service injection

--- a/jems-ui/src/app/common/components/top-bar/top-bar.component.scss
+++ b/jems-ui/src/app/common/components/top-bar/top-bar.component.scss
@@ -49,8 +49,8 @@ $grid-breakpoints: (
         xs: 0,
         sm: 576px,
         md: 768px,
-        lg: 992px,
-        xl: 1200px
+        lg: 1400px,
+        xl: 1600px
 ) !default;
 @function breakpoint-next($name, $breakpoints: $grid-breakpoints, $breakpoint-names: map-keys($breakpoints)) {
   $n: index($breakpoint-names, $name);
@@ -273,7 +273,7 @@ $rfs-breakpoint-unit-cache: unit($rfs-breakpoint);
   @include rfs($fs, $important);
 }
 
-  @media (max-width: 991.98px) {
+  @media (max-width: 1339.9px) {
     .navbar-expand-lg > .container,
     .navbar-expand-lg > .container-fluid, .navbar-expand-lg > .container-sm, .navbar-expand-lg > .container-md, .navbar-expand-lg > .container-lg, .navbar-expand-lg > .container-xl {
       padding-right: 0;
@@ -281,7 +281,7 @@ $rfs-breakpoint-unit-cache: unit($rfs-breakpoint);
     }
   }
 
-  @media (min-width: 992px) {
+  @media (min-width: 1400px) {
     .navbar-expand-lg {
       -ms-flex-flow: row nowrap;
       flex-flow: row nowrap;
